# websockets

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml  websockets.qbs
src/: CMakeLists.txt  qmldir  src.qbs  websocketconnection.cpp  websocketconnection.h  websockets.cpp  websockets.h  websockets_global.h  websockets_metadata.json  websocketserver.cpp  websocketserver.h  websocketserver_p.h  websocketworker.cpp  websocketworker.h
